plugins {
    id 'java'
    id 'org.springframework.boot' version '3.2.2'
    id 'io.spring.dependency-management' version '1.1.4'
    id 'idea'
}

group = 'dev.orme'
version = '0.0.1-SNAPSHOT'

java {
    sourceCompatibility = '21'
}

idea {
    module {
        downloadJavadoc = true
        downloadSources = true
    }
}
//
//bootJar {
//    enabled = false
//}
//
//jar {
//    enabled = true
//}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-webflux'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
    runtimeOnly 'org.postgresql:postgresql'
    compileOnly "org.springframework.boot:spring-boot-devtools"
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
}

tasks.named('test') {
    useJUnitPlatform()
}
